--- a/project1/Pages/Index.cshtml
+++ b/project1/Pages/Index.cshtml
@@ -6,5 +6,15 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+    <h1 class="display-4">Welcome to TechLearning</h1>
+
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
